--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,28 @@
-﻿APScheduler==3.10.4
-blinker==1.7.0
-cffi==1.16.0
-click==8.1.7
-colorama==0.4.6
-cryptography==42.0.4
-dnspython==2.6.1
-Flask==3.0.2
-Flask-Cors==4.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
-jwt==1.3.1
-MarkupSafe==2.1.5
-numpy==1.26.4
-pandas==2.2.0
-pycparser==2.21
-PyJWT==2.8.0
-pymongo==4.6.1
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-pytz==2024.1
-six==1.16.0
-tzdata==2024.1
-tzlocal==5.2
-Werkzeug==3.0.1
-XlsxWriter==3.2.0
+﻿APScheduler
+blinker
+cffi
+click
+colorama
+cryptography
+dnspython
 Flask
+Flask-Cors
+itsdangerous
+Jinja2
+MarkupSafe
+numpy
+pandas
+pycparser
 pymongo
-flask-cors
-Gunicorn
+python-dateutil
 python-dotenv
+pytz
+six
+tzdata
+tzlocal
+Werkzeug
+XlsxWriter
+Gunicorn
 PyJWT
 flask_jwt_extended
 xlsxwriter
